# feetmap

./: .gitignore  Procfile  db.sqlite3  main.py  manage.py  output.html  pyproject.toml  render-build.sh  requirements.txt  run_gunicorn.sh  test_template.py  webconfig.txt
draw/: admin.py  context_processors.py  forms.py  models.py  tests_visibility.py  urls.py  views.py
draw/migrations/: 0001_initial.py  0002_userprofile_favorite_colors.py  0003_outline_user_outline_visible_to_all.py  0004_userprofile_last_color_userprofile_last_opacity_and_more.py  0005_drawing_name.py
draw/templates/: base.html
draw/templates/draw/: gallery.html  index.html  login.html  register.html  upload.html
feetmap/: asgi.py  settings.py  urls.py  wsgi.py
