[project]
name = "feetmap"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=3.1.2",
    "django==6.0.3",
    "django-cloudinary-storage>=0.3.0",
    "django-environ>=0.13.0",
    "gunicorn>=25.1.0",
    "pillow==12.1.1",
    "psycopg2-binary>=2.9.11",
    "whitenoise>=6.12.0",
]
